@@ -27,6 +27,15 @@ Specifies the left offset for client-side shadows.
 .BI \-t\ top-offset
 Specifies the top offset for client-side shadows. 
 .TP
+.BI \-I\ fade-in-step
+Specifies the opacity change between steps while fading in.
+.TP
+.BI \-O\ fade-out-step
+Specifies the opacity change between steps while fading out.
+.TP
+.BI \-D\ fade-delta
+Specifies the time (in milliseconds) between steps in a fade.
+.TP
 .BI \-a
 Automatic server-side compositing.  This instructs the server to use the
 standard composition rules.  Useful for debugging.
